# catarminal

./: .gitignore  Cargo.toml  README.md
res/: map.txt
src/: app.rs  enums.rs  game.rs  logic.rs  main.rs  map.txt  objects.rs  render.rs
src/assets/: map.txt
src/render/: anim.rs  drag.rs  draw.rs  game.rs  input.rs  iter.rs  mod.rs  mount.rs  run.rs  screen.rs  shape.rs  space.rs  world.rs
src/render/drawing/: counter.rs  drag.rs  game.rs  mod.rs  players.rs  shape.rs
src/render/drawing/map/: map.rs  mod.rs  parse.rs  placement.rs  port.rs  road.rs  tile.rs
src/render/drawing/players/: list.rs  mod.rs  player.rs
src/render/map/: map.rs  mod.rs  port.rs  tile.rs
