[package]
name = "term-catan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tui = "0.18"
crossterm = "0.23"
unicode-width = "0.1.5"
unicode-segmentation = "1.9.0"
lazy_static = "1.4.0"