[package]
name = "catarminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
log = "0.4"
tui = "0.18"
tui-logger = "0.8"
crossterm = "0.23"
unicode-width = "0.1"
unicode-segmentation = "1.9"
lazy_static = "1.4"